name:                directory-hash
version:             0.1.0.2
synopsis:            Get a hash of all files in directory
description:         For a given directory and hash function name outputs lines of hash and file path pairs
homepage:            https://hackage.haskell.org/package/directory-hash
license:             MIT
license-file:        LICENSE
author:              Vytautas Jakutis
maintainer:          vytautas@jakut.is
copyright:           (c) 2015 Vytautas Jakutis
category:            System
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:              git
  location:          https://github.com/jakutis/directory-hash

source-repository this
  type:              git
  location:          https://github.com/jakutis/directory-hash
  tag:               0.1.0.2

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:
    base >=4.7 && <4.8,
    directory >=1.2 && <1.3
  exposed-modules:
    DirectoryHash.Executable

executable directory-hash
  hs-source-dirs:    executables
  default-language:  Haskell2010
  build-depends:
    directory-hash,
    base >=4.7 && <4.8
  main-is:           Main.hs

test-suite directory-hash-test
  hs-source-dirs:    test
  default-language:  Haskell2010
  build-depends:
    directory-hash,
    base >=4.7 && <4.8,
    hspec >=2.1 && <2.2,
    silently >=1.2 && <1.3
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
